<?xml version="1.0"?>
<package>
  <name>fcn_3d</name>
  <version>0.0.0</version>
  <description>Object segmentaion in 3D with fully convolutional network architecture.</description>
  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <license>MIT</license>
  <url type="website">http://github.com/wkentaro/fcn_3d</url>
  <author email="www.kentaro.wada@gmail.com">Kentaro Wada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>eusurdf</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>jsk_interactive_marker</run_depend>
  <run_depend>jsk_pcl_ros</run_depend>
  <run_depend>jsk_perception</run_depend>
  <run_depend>jsk_topic_tools</run_depend>
  <run_depend>openni_launch</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>